cmake_minimum_required(VERSION 3.5)

project(Irrlicht)

find_package(PNG REQUIRED)
find_package(JPEG REQUIRED)
find_package(ZLIB REQUIRED)
find_package(SDL2 REQUIRED)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include"
                    "${JPEG_INCLUDE_DIR}"
                    "${PNG_INCLUDE_DIRS}"
                    "${ZLIB_INCLUDE_DIR}"
                    "${SDL2_INCLUDE_DIRS}")

add_definitions(-DNDEBUG=1 -DIRRLICHT_EXPORTS=1 -D_IRR_STATIC_LIB_)

if(WIN32)
	add_definitions(-DNO_IRR_COMPILE_WITH_SDL_TEXTINPUT_
		-DNO_IRR_COMPILE_WITH_OGLES2_
		-DNO_IRR_COMPILE_WITH_DIRECT3D_9_
		-DNO_IRR_COMPILE_WITH_DIRECTINPUT_JOYSTICK_)
endif()

set(IRRLICHT_SOURCES
	source/Irrlicht/aesGladman/aescrypt.cpp
	source/Irrlicht/aesGladman/aeskey.cpp
	source/Irrlicht/aesGladman/aestab.cpp
	source/Irrlicht/aesGladman/fileenc.cpp
	source/Irrlicht/aesGladman/hmac.cpp
	source/Irrlicht/aesGladman/prng.cpp
	source/Irrlicht/aesGladman/pwd2key.cpp
	source/Irrlicht/aesGladman/sha1.cpp
	source/Irrlicht/aesGladman/sha2.cpp
	source/Irrlicht/burning_shader_color.cpp
	source/Irrlicht/C3DSMeshFileLoader.cpp
	source/Irrlicht/CAnimatedMeshHalfLife.cpp
	source/Irrlicht/CAnimatedMeshMD2.cpp
	source/Irrlicht/CAnimatedMeshMD3.cpp
	source/Irrlicht/CAnimatedMeshSceneNode.cpp
	source/Irrlicht/CAttributes.cpp
	source/Irrlicht/CB3DMeshFileLoader.cpp
	source/Irrlicht/CB3DMeshWriter.cpp
	source/Irrlicht/CBillboardSceneNode.cpp
	source/Irrlicht/CBoneSceneNode.cpp
	source/Irrlicht/CBSPMeshFileLoader.cpp
	source/Irrlicht/CBurningShader_Raster_Reference.cpp
	source/Irrlicht/CCameraSceneNode.cpp
	source/Irrlicht/CColladaFileLoader.cpp
	source/Irrlicht/CColladaMeshWriter.cpp
	source/Irrlicht/CColorConverter.cpp
	source/Irrlicht/CCSMLoader.cpp
	source/Irrlicht/CCubeSceneNode.cpp
	source/Irrlicht/CD3D9Driver.cpp
	source/Irrlicht/CD3D9HLSLMaterialRenderer.cpp
	source/Irrlicht/CD3D9NormalMapRenderer.cpp
	source/Irrlicht/CD3D9ParallaxMapRenderer.cpp
	source/Irrlicht/CD3D9RenderTarget.cpp
	source/Irrlicht/CD3D9ShaderMaterialRenderer.cpp
	source/Irrlicht/CD3D9Texture.cpp
	source/Irrlicht/CDefaultGUIElementFactory.cpp
	source/Irrlicht/CDefaultSceneNodeAnimatorFactory.cpp
	source/Irrlicht/CDefaultSceneNodeFactory.cpp
	source/Irrlicht/CDepthBuffer.cpp
	source/Irrlicht/CDMFLoader.cpp
	source/Irrlicht/CDummyTransformationSceneNode.cpp
	source/Irrlicht/CEGLManager.cpp
	source/Irrlicht/CEmptySceneNode.cpp
	source/Irrlicht/CFileList.cpp
	source/Irrlicht/CFileSystem.cpp
	source/Irrlicht/CFPSCounter.cpp
	source/Irrlicht/CGeometryCreator.cpp
	source/Irrlicht/CGLXManager.cpp
	source/Irrlicht/CGUIButton.cpp
	source/Irrlicht/CGUICheckBox.cpp
	source/Irrlicht/CGUIColorSelectDialog.cpp
	source/Irrlicht/CGUIComboBox.cpp
	source/Irrlicht/CGUIContextMenu.cpp
	source/Irrlicht/CGUIEditBox.cpp
	source/Irrlicht/CGUIEnvironment.cpp
	source/Irrlicht/CGUIFileOpenDialog.cpp
	source/Irrlicht/CGUIFont.cpp
	source/Irrlicht/CGUIImage.cpp
	source/Irrlicht/CGUIImageList.cpp
	source/Irrlicht/CGUIInOutFader.cpp
	source/Irrlicht/CGUIListBox.cpp
	source/Irrlicht/CGUIMenu.cpp
	source/Irrlicht/CGUIMeshViewer.cpp
	source/Irrlicht/CGUIMessageBox.cpp
	source/Irrlicht/CGUIModalScreen.cpp
	source/Irrlicht/CGUIProfiler.cpp
	source/Irrlicht/CGUIScrollBar.cpp
	source/Irrlicht/CGUISkin.cpp
	source/Irrlicht/CGUISpinBox.cpp
	source/Irrlicht/CGUISpriteBank.cpp
	source/Irrlicht/CGUIStaticText.cpp
	source/Irrlicht/CGUITabControl.cpp
	source/Irrlicht/CGUITable.cpp
	source/Irrlicht/CGUIToolBar.cpp
	source/Irrlicht/CGUITreeView.cpp
	source/Irrlicht/CGUIWindow.cpp
	source/Irrlicht/CImage.cpp
	source/Irrlicht/CImageLoaderBMP.cpp
	source/Irrlicht/CImageLoaderDDS.cpp
	source/Irrlicht/CImageLoaderJPG.cpp
	source/Irrlicht/CImageLoaderPCX.cpp
	source/Irrlicht/CImageLoaderPNG.cpp
	source/Irrlicht/CImageLoaderPPM.cpp
	source/Irrlicht/CImageLoaderPSD.cpp
	source/Irrlicht/CImageLoaderPVR.cpp
	source/Irrlicht/CImageLoaderRGB.cpp
	source/Irrlicht/CImageLoaderTGA.cpp
	source/Irrlicht/CImageLoaderWAL.cpp
	source/Irrlicht/CImageWriterBMP.cpp
	source/Irrlicht/CImageWriterJPG.cpp
	source/Irrlicht/CImageWriterPCX.cpp
	source/Irrlicht/CImageWriterPNG.cpp
	source/Irrlicht/CImageWriterPPM.cpp
	source/Irrlicht/CImageWriterPSD.cpp
	source/Irrlicht/CImageWriterTGA.cpp
	source/Irrlicht/CIrrDeviceConsole.cpp
	source/Irrlicht/CIrrDeviceFB.cpp
	source/Irrlicht/CIrrDeviceLinux.cpp
	source/Irrlicht/CIrrDeviceSDL.cpp
	source/Irrlicht/CIrrDeviceStub.cpp
	source/Irrlicht/CIrrDeviceWin32.cpp
	source/Irrlicht/CIrrMeshFileLoader.cpp
	source/Irrlicht/CIrrMeshWriter.cpp
	source/Irrlicht/CLightSceneNode.cpp
	source/Irrlicht/CLimitReadFile.cpp
	source/Irrlicht/CLMTSMeshFileLoader.cpp
	source/Irrlicht/CLogger.cpp
	source/Irrlicht/CLWOMeshFileLoader.cpp
	source/Irrlicht/CMD2MeshFileLoader.cpp
	source/Irrlicht/CMD3MeshFileLoader.cpp
	source/Irrlicht/CMemoryFile.cpp
	source/Irrlicht/CMeshCache.cpp
	source/Irrlicht/CMeshManipulator.cpp
	source/Irrlicht/CMeshSceneNode.cpp
	source/Irrlicht/CMeshTextureLoader.cpp
	source/Irrlicht/CMetaTriangleSelector.cpp
	source/Irrlicht/CMountPointReader.cpp
	source/Irrlicht/CMS3DMeshFileLoader.cpp
	source/Irrlicht/CMY3DMeshFileLoader.cpp
	source/Irrlicht/CNPKReader.cpp
	source/Irrlicht/CNullDriver.cpp
	source/Irrlicht/COBJMeshFileLoader.cpp
	source/Irrlicht/COBJMeshWriter.cpp
	source/Irrlicht/COCTLoader.cpp
	source/Irrlicht/COctreeSceneNode.cpp
	source/Irrlicht/COctreeTriangleSelector.cpp
	source/Irrlicht/COGLES2Driver.cpp
	source/Irrlicht/COGLES2ExtensionHandler.cpp
	source/Irrlicht/COGLES2FixedPipelineRenderer.cpp
	source/Irrlicht/COGLES2MaterialRenderer.cpp
	source/Irrlicht/COGLES2NormalMapRenderer.cpp
	source/Irrlicht/COGLES2ParallaxMapRenderer.cpp
	source/Irrlicht/COGLES2Renderer2D.cpp
	source/Irrlicht/COGLESDriver.cpp
	source/Irrlicht/COGLESExtensionHandler.cpp
	source/Irrlicht/COgreMeshFileLoader.cpp
	source/Irrlicht/COpenGLCacheHandler.cpp
	source/Irrlicht/COpenGLDriver.cpp
	source/Irrlicht/COpenGLExtensionHandler.cpp
	source/Irrlicht/COpenGLNormalMapRenderer.cpp
	source/Irrlicht/COpenGLParallaxMapRenderer.cpp
	source/Irrlicht/COpenGLShaderMaterialRenderer.cpp
	source/Irrlicht/COpenGLSLMaterialRenderer.cpp
	source/Irrlicht/COSOperator.cpp
	source/Irrlicht/CPakReader.cpp
	source/Irrlicht/CParticleAnimatedMeshSceneNodeEmitter.cpp
	source/Irrlicht/CParticleAttractionAffector.cpp
	source/Irrlicht/CParticleBoxEmitter.cpp
	source/Irrlicht/CParticleCylinderEmitter.cpp
	source/Irrlicht/CParticleFadeOutAffector.cpp
	source/Irrlicht/CParticleGravityAffector.cpp
	source/Irrlicht/CParticleMeshEmitter.cpp
	source/Irrlicht/CParticlePointEmitter.cpp
	source/Irrlicht/CParticleRingEmitter.cpp
	source/Irrlicht/CParticleRotationAffector.cpp
	source/Irrlicht/CParticleScaleAffector.cpp
	source/Irrlicht/CParticleSphereEmitter.cpp
	source/Irrlicht/CParticleSystemSceneNode.cpp
	source/Irrlicht/CPLYMeshFileLoader.cpp
	source/Irrlicht/CPLYMeshWriter.cpp
	source/Irrlicht/CProfiler.cpp
	source/Irrlicht/CQ3LevelMesh.cpp
	source/Irrlicht/CQuake3ShaderSceneNode.cpp
	source/Irrlicht/CReadFile.cpp
	source/Irrlicht/CSceneCollisionManager.cpp
	source/Irrlicht/CSceneLoaderIrr.cpp
	source/Irrlicht/CSceneManager.cpp
	source/Irrlicht/CSceneNodeAnimatorCameraFPS.cpp
	source/Irrlicht/CSceneNodeAnimatorCameraMaya.cpp
	source/Irrlicht/CSceneNodeAnimatorCollisionResponse.cpp
	source/Irrlicht/CSceneNodeAnimatorDelete.cpp
	source/Irrlicht/CSceneNodeAnimatorFlyCircle.cpp
	source/Irrlicht/CSceneNodeAnimatorFlyStraight.cpp
	source/Irrlicht/CSceneNodeAnimatorFollowSpline.cpp
	source/Irrlicht/CSceneNodeAnimatorRotation.cpp
	source/Irrlicht/CSceneNodeAnimatorTexture.cpp
	source/Irrlicht/CShadowVolumeSceneNode.cpp
	source/Irrlicht/CSkinnedMesh.cpp
	source/Irrlicht/CSkyBoxSceneNode.cpp
	source/Irrlicht/CSkyDomeSceneNode.cpp
	source/Irrlicht/CSMFMeshFileLoader.cpp
	source/Irrlicht/CSoftwareDriver2.cpp
	source/Irrlicht/CSoftwareDriver.cpp
	source/Irrlicht/CSoftwareTexture2.cpp
	source/Irrlicht/CSoftwareTexture.cpp
	source/Irrlicht/CSphereSceneNode.cpp
	source/Irrlicht/CSTLMeshFileLoader.cpp
	source/Irrlicht/CSTLMeshWriter.cpp
	source/Irrlicht/CTarReader.cpp
	source/Irrlicht/CTerrainSceneNode.cpp
	source/Irrlicht/CTerrainTriangleSelector.cpp
	source/Irrlicht/CTextSceneNode.cpp
	source/Irrlicht/CTRFlat.cpp
	source/Irrlicht/CTRFlatWire.cpp
	source/Irrlicht/CTRGouraud2.cpp
	source/Irrlicht/CTRGouraudAlphaNoZ2.cpp
	source/Irrlicht/CTRGouraud.cpp
	source/Irrlicht/CTRGouraudNoZ2.cpp
	source/Irrlicht/CTRGouraudWire.cpp
	source/Irrlicht/CTriangleBBSelector.cpp
	source/Irrlicht/CTriangleSelector.cpp
	source/Irrlicht/CTRNormalMap.cpp
	source/Irrlicht/CTRParallaxMap.cpp
	source/Irrlicht/CTRStencilShadow.cpp
	source/Irrlicht/CTRTextureBlend.cpp
	source/Irrlicht/CTRTextureDetailMap2.cpp
	source/Irrlicht/CTRTextureFlat.cpp
	source/Irrlicht/CTRTextureFlatWire.cpp
	source/Irrlicht/CTRTextureGouraud2.cpp
	source/Irrlicht/CTRTextureGouraudAdd2.cpp
	source/Irrlicht/CTRTextureGouraudAdd.cpp
	source/Irrlicht/CTRTextureGouraudAddNoZ2.cpp
	source/Irrlicht/CTRTextureGouraudAlpha.cpp
	source/Irrlicht/CTRTextureGouraudAlphaNoZ.cpp
	source/Irrlicht/CTRTextureGouraud.cpp
	source/Irrlicht/CTRTextureGouraudNoZ2.cpp
	source/Irrlicht/CTRTextureGouraudNoZ.cpp
	source/Irrlicht/CTRTextureGouraudVertexAlpha2.cpp
	source/Irrlicht/CTRTextureGouraudWire.cpp
	source/Irrlicht/CTRTextureLightMap2_Add.cpp
	source/Irrlicht/CTRTextureLightMap2_M1.cpp
	source/Irrlicht/CTRTextureLightMap2_M2.cpp
	source/Irrlicht/CTRTextureLightMap2_M4.cpp
	source/Irrlicht/CTRTextureLightMapGouraud2_M4.cpp
	source/Irrlicht/CTRTextureWire2.cpp
	source/Irrlicht/CTR_transparent_reflection_2_layer.cpp
	source/Irrlicht/CVideoModeList.cpp
	source/Irrlicht/CVolumeLightSceneNode.cpp
	source/Irrlicht/CWADReader.cpp
	source/Irrlicht/CWaterSurfaceSceneNode.cpp
	source/Irrlicht/CWebGL1Driver.cpp
	source/Irrlicht/CWGLManager.cpp
	source/Irrlicht/CWriteFile.cpp
	source/Irrlicht/CXMeshFileLoader.cpp
	source/Irrlicht/CXMLReader.cpp
	source/Irrlicht/CXMLWriter.cpp
	source/Irrlicht/CZBuffer.cpp
	source/Irrlicht/CZipReader.cpp
	source/Irrlicht/IBurningShader.cpp
	source/Irrlicht/Irrlicht.cpp
	source/Irrlicht/irrXML.cpp
	source/Irrlicht/leakHunter.cpp
	source/Irrlicht/os.cpp
	source/Irrlicht/utf8.cpp
)

add_library(irrlicht STATIC ${IRRLICHT_SOURCES})

target_link_libraries(irrlicht ${ZLIB_LIBRARY} ${PNG_LIBRARY} ${JPEG_LIBRARY})
